# image_marker

./: .bowerrc  .eslintignore  .eslintrc.js  .gitignore  .gitignore~  README.md  README.md~  ansible.cfg  bower.json  config.js  hosts  package.json  package.json~  router.js  server.js
backend/: ColorMap.hpp  DataMatrix2D.hpp  FilesystemUtils.hh  Slic.h  Vector.hpp  toString.hpp
c++/: CMakeLists.txt  CMakeLists.txt~  DataContainer.hh  Slic.cpp  SmartPtr.hpp  apitest.h
controller/: imageController.js
deployment/: playbook.yml
deployment/roles/update_application/defaults/: main.yml
deployment/roles/update_application/tasks/: main.yml
deployment/vars/: all.yml
frontend/: .bowerrc
frontend/public/scripts/: Router.js
frontend/public/scripts/controllers/: MarkerController.js
frontend/public/scripts/views/: MarkerView.js
im_processor/: CMakeLists.txt  binding.gyp  package.json
im_processor/src/: CMakeLists.txt  RecursiveSuperpixelClustering.cc  RecursiveSuperpixelClustering.hh  fillAllUnlabeledSegments.cc  fillAllUnlabeledSegments.h  fillSegment.cc  fillSegment.h  getImageMatrix.cc  getImageMatrix.h  im_processor.cc  prepareImg.cc  prepareImg.h
im_processor/src/lib/: ColorMap.cc  ColorMap.hpp  FilesystemUtils.cc  Slic.cpp  Slic.h  im_processor_api.cpp  im_processor_api.h  labelImageSoilCover.cpp  main_test_im_processor_api.cpp
im_processor/test/: test.js
models/: Image.js
public/: index.html
public/css/: main.css
public/scripts/: App.js  Router.js  config.js  main.js
public/scripts/collections/: Images.js
public/scripts/controllers/: ErrorController.js  MarkerController.js  MarkerSettingsController.js  NavigationController.js  OverviewController.js
public/scripts/layouts/: ImageNavigationLayout.js  ImagesOverviewLayout.js
public/scripts/models/: Image.js  Model.js
public/scripts/templates/: errorView.tpl  imageNavigationLayout.tpl  imageView.tpl  imagesOverviewLayout.tpl  markerSettingsView.tpl  markerView.tpl  navigationView.tpl
public/scripts/views/: ErrorView.js  MarkerSettingsView.js  MarkerView.js  NavigationView.js  OverviewCollectionView.js
